java 8 api compability fix